--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
   </section>
 
 
-  <section id="posts2" class="home-section wg-pages  "  >
+  <section id="posts" class="home-section wg-pages  "  >
     <div class="home-section-bg " ></div>
     <div class="container">
       <div class="row  ">
@@ -948,14 +948,175 @@
       </div>
     </div>
   </section>
+  <section id="talks" class="home-section wg-pages  "  >
+    <div class="home-section-bg " ></div>
+    <div class="container">
+      <div class="row  ">
+        <div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
+          <h1 class="mb-0">Talks</h1>
+        </div>
+        <div class="col-12 col-lg-8">
+          <div class="media stream-item">
+            <div class="media-body">
+              <div class="section-subheading article-title mb-0 mt-0">
+                <a href="/post/managing_research/" >Managing Research</a>
+              </div>
+              <a href="/post/managing_research/"  class="summary-link">
+                <div class="article-style">
+                  This talk deals with several research related questions. For example findings new research ideas, choose a research topic, staying updated with new research, working with your supervisors, and more.
+                </div>
+              </a>
+              <div class="stream-meta article-metadata">
+                <div class="article-metadata">
+                  <div>
+                    <span >Yonatan Bitton</span>
+                  </div>
+                  <span class="article-date">
+                    Jan 5, 2022
+                  </span>
+                  <span class="middot-divider"></span>
+                  <span class="article-reading-time">
+                    0 min read
+                  </span>
+                </div>
+              </div>
+            </div>
+            <div class="ml-3">
+              <a href="/post/managing_research/" >
+                <img src="/post/managing_research/featured_hub5b4b50c774fc1c76bbf2efa53919e8f_828066_150x0_resize_lanczos_3.png" alt="Managing Research" loading="lazy">
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  <section id="posts" class="home-section wg-pages  "  >
+  <section id="experience" class="home-section wg-experience  "  >
+   <div class="home-section-bg " >
+   </div>
+    <div class="container">
+      <div class="row  ">
+          <div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
+            <h1 class="mb-0">Work Experience</h1>
+          </div>
+          <div class="col-12 col-lg-8">
+            <div class="row experience">
+              <div class="col-auto text-center flex-column d-none d-sm-flex">
+                <div class="row h-50">
+                  <div class="col ">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+                <div class="m-2">
+                  <span class="badge badge-pill border exp-fill">&nbsp;</span>
+                </div>
+                <div class="row h-50">
+                  <div class="col border-right">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+              </div>
+              <div class="col py-2">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="d-flex align-content-start">
+                      <div class="mr-2 mb-2"><img src="/media/icons/brands/google-icon.svg" width="56px" height="56px" alt="Google Research"></div>
+                      <div>
+                        <div class="section-subheading card-title exp-title text-muted my-0">Research Intern</div>
+                        <div class="section-subheading card-title exp-company text-muted my-0">Google Research</div>
+                        <div class="text-muted exp-meta">
+                          Jul 2022 –
+                            Present
+                            <span class="middot-divider"></span>
+                            <span>Israel</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card-text">Researcher in Cerebra team</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row experience">
+              <div class="col-auto text-center flex-column d-none d-sm-flex">
+                <div class="row h-50">
+                  <div class="col ">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+                <div class="m-2">
+                  <span class="badge badge-pill border">&nbsp;</span>
+                </div>
+                <div class="row h-50">
+                  <div class="col border-right">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+              </div>
+              <div class="col py-2">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="d-flex align-content-start">
+                      <div class="mr-2 mb-2"><img src="/media/icons/brands/amazon-icon.svg" width="56px" height="56px" alt="Amazon Lab126"></div>
+                      <div>
+                        <div class="section-subheading card-title exp-title text-muted my-0">Applied Scientist Intern</div>
+                        <div class="section-subheading card-title exp-company text-muted my-0">Amazon Lab126</div>
+                        <div class="text-muted exp-meta">
+                          Oct 2019 – July 2022
+                            <span class="middot-divider"></span>
+                            <span>Israel</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card-text">Researcher in Halo team - Visual Fitness<br>
+                      Working on video classication problems, using state of the art computer vision methods</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row experience">
+              <div class="col-auto text-center flex-column d-none d-sm-flex">
+                <div class="row h-50">
+                  <div class="col border-right">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+                <div class="m-2">
+                  <span class="badge badge-pill border ">&nbsp;</span>
+                </div>
+                <div class="row h-50">
+                  <div class="col ">&nbsp;</div>
+                  <div class="col">&nbsp;</div>
+                </div>
+              </div>
+              <div class="col py-2">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="d-flex align-content-start">
+                      <div class="mr-2 mb-2"><img src="/media/icons/brands/ibm-icon.svg" width="56px" height="56px" alt="IBM Research"></div>
+                      <div>
+                        <div class="section-subheading card-title exp-title text-muted my-0">Research Student</div>
+                        <div class="section-subheading card-title exp-company text-muted my-0">IBM Research</div>
+                        <div class="text-muted exp-meta">
+                          Jun 2017 – Oct 2019
+                            <span class="middot-divider"></span>
+                            <span>Israel</span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="card-text">Using data-science and machine-learning methods in order to detect frauds</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+    </div>
+  </section>
+
+  <section id="others" class="home-section wg-pages  "  >
      <div class="home-section-bg " >
      </div>
       <div class="container">
         <div class="row  ">
             <div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
-              <h1 class="mb-0">Featured Publications</h1>
+              <h1 class="mb-0">Others</h1>
             </div>
             <div class="col-12 col-lg-8">
               <div class="card-simple">
@@ -1159,126 +1320,6 @@
         </div>
       </div>
   </section>
-
-  <section id="experience" class="home-section wg-experience  "  >
-   <div class="home-section-bg " >
-   </div>
-    <div class="container">
-      <div class="row  ">
-          <div class="section-heading col-12 col-lg-4 mb-3 mb-lg-0 d-flex flex-column align-items-center align-items-lg-start">
-            <h1 class="mb-0">Work Experience</h1>
-          </div>
-          <div class="col-12 col-lg-8">
-            <div class="row experience">
-              <div class="col-auto text-center flex-column d-none d-sm-flex">
-                <div class="row h-50">
-                  <div class="col ">&nbsp;</div>
-                  <div class="col">&nbsp;</div>
-                </div>
-                <div class="m-2">
-                  <span class="badge badge-pill border exp-fill">&nbsp;</span>
-                </div>
-                <div class="row h-50">
-                  <div class="col border-right">&nbsp;</div>
-                  <div class="col">&nbsp;</div>
-                </div>
-              </div>
-              <div class="col py-2">
-                <div class="card">
-                  <div class="card-body">
-                    <div class="d-flex align-content-start">
-                      <div class="mr-2 mb-2"><img src="/media/icons/brands/google-icon.svg" width="56px" height="56px" alt="Google Research"></div>
-                      <div>
-                        <div class="section-subheading card-title exp-title text-muted my-0">Research Intern</div>
-                        <div class="section-subheading card-title exp-company text-muted my-0">Google Research</div>
-                        <div class="text-muted exp-meta">
-                          Jul 2022 –
-                            Present
-                            <span class="middot-divider"></span>
-                            <span>Israel</span>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card-text">Researcher in Cerebra team</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row experience">
-              <div class="col-auto text-center flex-column d-none d-sm-flex">
-                <div class="row h-50">
-                  <div class="col ">&nbsp;</div>
-                  <div class="col">&nbsp;</div>
-                </div>
-                <div class="m-2">
-                  <span class="badge badge-pill border">&nbsp;</span>
-                </div>
-                <div class="row h-50">
-                  <div class="col border-right">&nbsp;</div>
-                  <div class="col">&nbsp;</div>
-                </div>
-              </div>
-              <div class="col py-2">
-                <div class="card">
-                  <div class="card-body">
-                    <div class="d-flex align-content-start">
-                      <div class="mr-2 mb-2"><img src="/media/icons/brands/amazon-icon.svg" width="56px" height="56px" alt="Amazon Lab126"></div>
-                      <div>
-                        <div class="section-subheading card-title exp-title text-muted my-0">Applied Scientist Intern</div>
-                        <div class="section-subheading card-title exp-company text-muted my-0">Amazon Lab126</div>
-                        <div class="text-muted exp-meta">
-                          Oct 2019 – July 2022
-                            <span class="middot-divider"></span>
-                            <span>Israel</span>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card-text">Researcher in Halo team - Visual Fitness<br>
-                      Working on video classication problems, using state of the art computer vision methods</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row experience">
-              <div class="col-auto text-center flex-column d-none d-sm-flex">
-                <div class="row h-50">
-                  <div class="col border-right">&nbsp;</div>
-                  <div class="col">&nbsp;</div>
-                </div>
-                <div class="m-2">
-                  <span class="badge badge-pill border ">&nbsp;</span>
-                </div>
-                <div class="row h-50">
-                  <div class="col ">&nbsp;</div>
-                  <div class="col">&nbsp;</div>
-                </div>
-              </div>
-              <div class="col py-2">
-                <div class="card">
-                  <div class="card-body">
-                    <div class="d-flex align-content-start">
-                      <div class="mr-2 mb-2"><img src="/media/icons/brands/ibm-icon.svg" width="56px" height="56px" alt="IBM Research"></div>
-                      <div>
-                        <div class="section-subheading card-title exp-title text-muted my-0">Research Student</div>
-                        <div class="section-subheading card-title exp-company text-muted my-0">IBM Research</div>
-                        <div class="text-muted exp-meta">
-                          Jun 2017 – Oct 2019
-                            <span class="middot-divider"></span>
-                            <span>Israel</span>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="card-text">Using data-science and machine-learning methods in order to detect frauds</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-      </div>
-    </div>
-  </section>
-
-
 
   </div>
 
